improve api spec via frontend suggestions
